--- a/Build_Mate_fe/src/Pages/PrivacyPolicy.css
+++ b/Build_Mate_fe/src/Pages/PrivacyPolicy.css
@@ -1,22 +1,35 @@
 /* PrivacyPolicy.css */
-
-.privacy-policy {
-  max-width: 800px;
+.privacy-policy{
+  background-color: #ff6a00;
+  padding: 2% 0;
+}
+.privacy-policy01 {
+  width: 1100px;
+  border-radius: 100px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 50px;
+  border: 1px solid black;
   background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.493);
   font-family: 'Poppins', sans-serif;
   color: #333;
   line-height: 1.6;
 }
 
+.privacyLogo{
+  position: absolute;
+  width: 1000px;
+  align-items: center;
+  top: 50%;
+  left: 15%;
+  filter: opacity(20%);
+}
 .privacy-policy h1 {
-  font-size: 2.5em;
+  font-size: 4.5em;
   margin-bottom: 20px;
   color: #FF6B00;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .privacy-policy h2 {
