--- a/Build_Mate_fe/src/Pages/Registration.css
+++ b/Build_Mate_fe/src/Pages/Registration.css
@@ -11,15 +11,19 @@ body {
   height: auto;
   font-family: "Poppins", sans-serif;
   padding: 5%;
+  background-color: #FF6B00;
   /* background-color: #FF6B00; */
 }
-
+.reg-form1{
+  width: 900px;
+  border-radius: 100px;
+  background-color: white;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
 .reg-form1 {
   background: #ffffff;
-  padding: 40px;
-  width: 50%;
-  border-radius: 10px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 40px 100px;
+  border-radius: 110px;
 }
 
 .reg-form1 input{
@@ -36,7 +40,8 @@ body {
   font-weight: 700;
   text-align: center;
   margin: auto;
-  color: #333333;
+  color: #000000;
+  text-transform: uppercase;
 }
 
 .line {
@@ -49,7 +54,7 @@ body {
 .reg-form-label {
   font-size: 16px;
   margin-bottom: 10px;
-  color: #333333;
+  color: #000000;
 }
 
 .reg-form-fulll1{
@@ -64,7 +69,7 @@ body {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid #cccccc;
+  border: 1px solid #000000;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   font-size: 14px;
 }
@@ -75,7 +80,7 @@ body {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid #cccccc;
+  border: 1px solid #000000;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   font-size: 14px;
 }
@@ -100,7 +105,7 @@ body {
   padding: 10px;
   padding-right: 20px;
   border-radius: 5px;
-  border: 1px solid #cccccc;
+  border: 1px solid #000000;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
@@ -108,7 +113,7 @@ body {
   width: 100%;
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid #cccccc;
+  border: 1px solid #000000;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   font-size: 14px;
 }
@@ -130,7 +135,7 @@ body {
     justify-content: center;
     align-items: center;
   padding: 10px 0px;
-  border: 2px solid #cccccc;
+  border: 2px solid #000000;
   border-radius: 25px;
   cursor: pointer;
   line-height:1.5vw;
@@ -213,4 +218,8 @@ body {
 
 .reg-button-b1 {
   margin-left: 5%;
+}
+
+.checkbox{
+  margin-left: 3%;
 }
