--- a/Build_Mate_fe/src/Components/Footer/footer.css
+++ b/Build_Mate_fe/src/Components/Footer/footer.css
@@ -86,7 +86,8 @@
 }
 
 .footer-bottom a {
-    color: #007bff;
+    /* color: #007bff; */
+    color: #ffffff;
     text-decoration: none;
     margin-left: 1em;
 }
